--- a/framework/mcp.json.example
+++ b/framework/mcp.json.example
@@ -24,7 +24,11 @@
     },
     "filesystem": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-filesystem", "/path/to/allowed/directory"]
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-filesystem",
+        "/path/to/allowed/directory"
+      ]
     },
     "memory": {
       "command": "npx",
